# wordchicken

./: .gitignore  Cargo.toml  README.md  buildguide.md  index.html  trunk.toml
assets/: words.csv
crates/cli_game/: Cargo.toml
crates/cli_game/src/: main.rs
crates/game/: Cargo.toml
crates/game/src/: guess.rs  main.rs  result.rs  set_target.rs  start.rs  state_manager.rs
crates/game/src/util/: mod.rs  words.rs
crates/make_embeddings/: Cargo.toml
crates/make_embeddings/src/: main.rs
crates/words_lib/: Cargo.toml
crates/words_lib/src/: lib.rs
crates/words_lib/src/csv_to_strings/: mod.rs
crates/words_lib/src/embedding/: embedding_model.rs  mod.rs  words_to_vec.rs
crates/words_lib/src/log/: mod.rs
crates/words_lib/src/save/: mod.rs
crates/words_lib/src/words/: mod.rs
js/: embedding.js
src/: main.rs  util.rs
src/util/: words.rs
