[package]
name = "wordchicken"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["webgl2"] }

rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

serde = { version = "1", features = ["derive"] }
csv = "1"
wasm-bindgen-futures = "0.4.63"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "console"] }