[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.0"

rand = "0.10.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = "0.22.2"
hf-hub = "0.5.0"
anyhow = "1.0"
bincode = "1"
futures-lite = "2"
directories = "6.0.0"

words_lib = {path = "../words_lib"}