[package]
name = "make_embeddings"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = "0.22.2"
hf-hub = "0.5.0"
anyhow = "1.0"
bincode = "1"
futures-lite = "2"

rayon = "1.11.0"
indicatif = "0.18.4"

words_lib = {path = "../words_lib"}