[package]
name = "words_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

candle-core = {version = "0.9.2", features = ["cuda"]}
candle-nn = {version = "0.9.2", features = ["cuda"]}
candle-transformers = {version = "0.9.2", features = ["cuda"]}
tokenizers = "0.22.2"
hf-hub = "0.5.0"
anyhow = "1.0"
bincode = "1"
futures-lite = "2"